--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "serve -s .",
+    "build": "rm -rf dist && mkdir -p dist && rsync -a --exclude 'node_modules' --exclude 'dist' --exclude '.git' --exclude 'workflows' ./ dist/",
+    "preview": "serve -s dist -l 43001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
